--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<link rel="icon" type="image/png" href=".png">
 <title>PC-98の備忘録</title>
+<link rel="icon" href="aicon.ico">
 </head>
 <body background="haikei.png">
 <center>
