--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 <a>↓ジャンル分けしていますので、下にあるリンクからお入りください(画像からでも飛べます)↓</a>
 <br>
 <br>
-<a href="https://98bibo.github.io/9801/"><img src="9801.png"><br>PC-9801シリーズの部屋</a>
+<a href="https://pc98bibo.github.io/9801/"><img src="9801.png"><br>PC-9801シリーズの部屋</a>
 <br>
 <br>
-<a href="https://98bibo.github.io/9821/"><img src="9821.png"><br>PC-9821シリーズの部屋</a>
+<a href="https://pc98bibo.github.io/9821/"><img src="9821.png"><br>PC-9821シリーズの部屋</a>
 <br>
 <br>
-<a href="https://98bibo.github.io/98note/"><img src="98note.png"><br>98NOTEの部屋</a>
+<a href="https://pc98bibo.github.io/98note/"><img src="98note.png"><br>98NOTEの部屋</a>
 <br>
 <br>
-<a href="https://98bibo.github.io/epson/"><img src="epson.png"><br>EPSON互換機の部屋</a>
+<a href="https://pc98bibo.github.io/epson/"><img src="epson.png"><br>EPSON互換機の部屋</a>
 <br>
 <br>
 <br>
@@ -43,7 +43,7 @@
 <br>
 <br>
 <br>
-<a href="https://98bibo.github.io/who/">管理人の紹介</a>
+<a href="https://pc98bibo.github.io/who/">管理人の紹介</a>
 <br>
 <br>
 <a href="https://twitter.com/reitaisaiikitai">CONTACT(Twitter)</a>
