--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <br> 
 <br>
 <br>
-<a>このサイトは管理人が９８趣味を忘れないという目的で開設しました。</a>
+<a>このサイトは管理人の備忘録およびPC-98の知名度向上のために開設しました。</a>
 <br>
 <a>もしかしたら皆々様のお役に立てる情報が載っている『かも』しれません。(たぶん)</a>
 <br>
