--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta name="google-site-verification" content="8QpJMDSdj6dmxJ1vD7weFJPHM4uEpxo-8kbbtGkjpN8" />
 <title>PC-98の備忘録</title>
 <link rel="icon" href="aicon.ico">
 </head>
