--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 <a href="https://pc98bibo.github.io/epson/"><img src="epson.png"><br>EPSON互換機の部屋</a>
 <br>
 <br>
+<a href="https://pc98bibo.github.io/soft/"><img src="soft.png"><br>各種ソフトの部屋</a>
+<br>
 <br>
 <hr>
 <br>
