--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <br>
 <a>主にＰＣ‐９８０１、ＰＣ‐９８２１、９８ｎｏｔｅ等についての情報が書いてあります。</a>
 <hr>
-<a>↓ジャンル分けしていますので、下にあるリンクからお入りください(画像からでも飛べます)↓</a>
+<a>↓ジャンル分けしていますので、下にある画像からお入りください↓</a>
 <br>
 <br>
 <a href="https://pc98bibo.github.io/9801/"><img src="9801.png"><br>PC-9801シリーズの部屋</a>
