--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <a href="https://pc98bibo.github.io/9801/"><img src="9801.png"><br>PC-9801シリーズの部屋</a>
 <br>
 <br>
-<a href="https://pc98bibo.github.io/9821/"><img src="9821.png"><br>PC-9821シリーズの部屋</a>
+<a href="https://pc98bibo.github.io/9821/"><img src="9821.png"><br>PC-9821シリーズの部屋 (只今 1 記事が公開中)</a>
 <br>
 <br>
 <a href="https://pc98bibo.github.io/98note/"><img src="98note.png"><br>98NOTEの部屋</a>
