--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 <font color="orange">いらっしゃいませ　　ごゆっくりご覧ください。
 </marquee>
 <br>
+<a>↓アクセスカウンター↓</a>
+<br>
+<!--タグはここから--><table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d491_f6_022/611c7b0fcf5e4/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0" alt=""><img src="http://www.rays-counter.com/images/counter_04.gif" border="0"><img src="http://www.rays-counter.com/images/counter_05.gif" border="0" ></td></tr></table><!--ここまで-->
+<br>
+<br>
 <a><font color="black">☆☆☆最終更新日　<font color="red"><B>2021/08/17</B><font color="black">☆☆☆</a>
 <br> 
 <br>
