--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </marquee>
 <br>
 <br>
-<。a><font color="black">☆☆☆最終更新日　<font color="red"><B>2021/08/17</B><font color="black">☆☆☆</a>
+<a><font color="black">☆☆☆最終更新日　<font color="red"><B>2021/08/17</B><font color="black">☆☆☆</a>
 <br> 
 <br>
 <br>
