--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <font color="orange">いらっしゃいませ　　ごゆっくりご覧ください。
 </marquee>
 <br>
-<br>
+</center>
+<a>↓アクセスカウンター↓</a>
+<!--カウンタータグここから--> 
+<table title="＠無料カウンター" summary="＠無料カウンター" border="0" cellpadding="0" cellspacing="1"><tr><td><table border="0" cellspacing="0" cellpadding="0"><tr><td align="left"></td></tr><tr><td align="left"><a href="http://www.at-counter.biz/"><img src="http://www.at-counter.biz/image/today.gif" alt="アクセスカウンター" width="30" height="12" border="0" /></a></td></tr><tr><td align="left"><script type="text/javascript"> document.write('<script src="http://at-counter.biz/acs.php?');document.write('r='+document.referrer+'&p='+document.location.href);document.write('&t=0002&m=1"><\/script>');</script></td></tr><tr><td align="left"><a href="http://www.at-counter.biz/"><img src="http://www.at-counter.biz/image/yesterday.gif" alt="無料カウンター" width="50" height="12" border="0" /></a></td></tr><tr><td align="left"><script type="text/javascript"> document.write('<script src="http://at-counter.biz/acs.php?');document.write('r='+document.referrer+'&p='+document.location.href);document.write('&t=0002&m=2"><\/script>');</script></td></tr><tr><td align="left"><a href="http://www.at-counter.biz/"><img src="http://www.at-counter.biz/image/total.gif" alt="無料アクセスカウンター" width="30" height="12" border="0" /></a></td></tr><tr><td align="left"><script type="text/javascript"> document.write('<script src="http://at-counter.biz/acs.php?');document.write('r='+document.referrer+'&p='+document.location.href);document.write('&t=0002&m=3"><\/script>');</script></td></tr><tr><td align="left"><a href="http://www.at-counter.biz/"><img src="http://at-counter.biz/image/counter.gif" alt="ブログカウンター" width="64" height="12" border="0" /></a></td></tr><tr></tr><tr></tr></table></td></tr></table><!--カウンタータグここまで-->
+<center>
 <a><font color="black">☆☆☆最終更新日　<font color="red"><B>2021/08/17</B><font color="black">☆☆☆</a>
 <br> 
 <br>
