--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <br>
 <a><font color="black">☆☆☆最終更新日　<font color="red"><B>2021/08/17</B><font color="black">☆☆☆</a>
 <br> 
+<a><font color="red">[只今メンテナンスの為、下の各リンクに飛べなくなっております。申し訳ございません。<font color="black"></a>
 <br>
 <br>
 <a>このサイトは管理人の備忘録およびPC-98の知名度向上のために開設しました。</a>
