--- a/index.html
+++ b/index.html
@@ -28,26 +28,26 @@
 <a>↓ジャンル分けしていますので、下にある画像からお入りください↓</a>
 <br>
 <br>
-<a href="https://pc98bibo.github.io/9801/"><img src="9801.png"><br>PC-9801シリーズの部屋</a>
+<a href="https://pc98bibo.github.io/home/9801/"><img src="9801.png"><br>PC-9801シリーズの部屋</a>
 <br>
 <br>
-<a href="https://pc98bibo.github.io/9821/"><img src="9821.png"><br>PC-9821シリーズの部屋 (只今 1 記事が公開中)</a>
+<a href="https://pc98bibo.github.io/home/9821/"><img src="9821.png"><br>PC-9821シリーズの部屋 (只今 1 記事が公開中)</a>
 <br>
 <br>
-<a href="https://pc98bibo.github.io/98note/"><img src="98note.png"><br>98NOTEの部屋</a>
+<a href="https://pc98bibo.github.io/home/98note/"><img src="98note.png"><br>98NOTEの部屋</a>
 <br>
 <br>
-<a href="https://pc98bibo.github.io/epson/"><img src="epson.png"><br>EPSON互換機の部屋</a>
+<a href="https://pc98bibo.github.io/home/epson/"><img src="epson.png"><br>EPSON互換機の部屋</a>
 <br>
 <br>
-<a href="https://pc98bibo.github.io/soft/"><img src="soft.png"><br>各種ソフトの部屋</a>
+<a href="https://pc98bibo.github.io/home/soft/"><img src="soft.png"><br>各種ソフトの部屋</a>
 <br>
 <br>
 <hr>
 <br>
 <br>
 <br>
-<a href="https://pc98bibo.github.io/who/">管理人の紹介</a>
+<a href="https://pc98bibo.github.io/home/who/">管理人の紹介</a>
 <br>
 <br>
 <a href="https://twitter.com/reitaisaiikitai">CONTACT(Twitter)</a>
