--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <br>
 <a><font color="black">☆☆☆最終更新日　<font color="red"><B>2021/08/17</B><font color="black">☆☆☆</a>
 <br> 
-<a><font color="red">[只今メンテナンスの為、下の各リンクに飛べなくなっております。申し訳ございません。]<font color="black"></a>
 <br>
 <br>
 <a>このサイトは管理人の備忘録およびPC-98の知名度向上のために開設しました。</a>
@@ -47,7 +46,7 @@
 <br>
 <br>
 <br>
-<a href="https://pc98bibo.github.io/home/who/">管理人の紹介</a>
+<a href="https://pc98bibo.github.io/who/">管理人の紹介</a>
 <br>
 <br>
 <a href="https://twitter.com/reitaisaiikitai">CONTACT(Twitter)</a>
