--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <br>
 <br>
 <br>
-<a href="https://pc98bibo.github.io/who/">管理人の紹介</a>
+<a href="https://pc98bibo.github.io/home/who/">管理人の紹介</a>
 <br>
 <br>
 <a href="https://twitter.com/reitaisaiikitai">CONTACT(Twitter)</a>
