--- a/index.html
+++ b/index.html
@@ -1,56 +1,16 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<meta name="google-site-verification" content="8QpJMDSdj6dmxJ1vD7weFJPHM4uEpxo-8kbbtGkjpN8" />
-<title>PC-98の備忘録</title>
-<link rel="icon" href="aicon.ico">
+<title>転送中</title>
+<meta name=”refresh” content=”3;http://new.com/”>
 </head>
-<body background="haikei.png">
-<center>
-<font face="ＭＳ　Ｐゴシック">
-<h1>PC-9800シリーズの備忘録的な何か。</h1></center>
-<hr>
-<p>
-<center><marquee width=400 bgcolor="#000000">
-<font color="orange">いらっしゃいませ　　ごゆっくりご覧ください。
-</marquee>
-<br>
-<a><font color="black">☆☆☆最終更新日　<font color="red"><B>2021/08/17</B><font color="black">☆☆☆</a>
-<br> 
-<br>
-<br>
-<a>このサイトは管理人の備忘録およびPC-98の知名度向上のために開設しました。</a>
-<br>
-<a>もしかしたら皆々様のお役に立てる情報が載っている『かも』しれません。(たぶん)</a>
-<br>
-<a>主にＰＣ‐９８０１、ＰＣ‐９８２１、９８ｎｏｔｅ等についての情報が書いてあります。</a>
-<hr>
-<a>↓ジャンル分けしていますので、下にある画像からお入りください↓</a>
-<br>
-<br>
-<a href="https://pc98bibo.github.io/home/9801/"><img src="9801.png"><br>PC-9801シリーズの部屋</a>
-<br>
-<br>
-<a href="https://pc98bibo.github.io/home/9821/"><img src="9821.png"><br>PC-9821シリーズの部屋 (只今 1 記事が公開中)</a>
-<br>
-<br>
-<a href="https://pc98bibo.github.io/home/98note/"><img src="98note.png"><br>98NOTEの部屋</a>
-<br>
-<br>
-<a href="https://pc98bibo.github.io/home/epson/"><img src="epson.png"><br>EPSON互換機の部屋</a>
-<br>
-<br>
-<a href="https://pc98bibo.github.io/home/soft/"><img src="soft.png"><br>各種ソフトの部屋</a>
-<br>
-<br>
-<hr>
-<br>
-<br>
-<br>
-<a href="https://pc98bibo.github.io/home/who/">管理人の紹介</a>
-<br>
-<br>
-<a href="https://twitter.com/reitaisaiikitai">CONTACT(Twitter)</a>
-</center>
-</div>
+
+<body>
+
+<p>転送中です。少々お待ちください...</p>
+<p><a href="http://pc98bibo.html.xdomain.jp/home/">PC-98の備忘録</a>
+</p>
+
 </body>
+
 </html>
