--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>転送中</title>
-<meta name=”refresh” content=”3;http://new.com/”>
+<title>PC-98の備忘録</title>
 </head>
 
 <body>
 
-<p>転送中です。少々お待ちください...</p>
+<p>当サイトは移転しました。下記URLからお入りください</p>
 <p><a href="http://pc98bibo.html.xdomain.jp/home/">PC-98の備忘録</a>
 </p>
 
